replaced screenshots for project 4

--- a/project-4.html
+++ b/project-4.html
@@ -176,7 +176,7 @@
                   navigation bar. Photoshop was used to manipulate and crop images.
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="https://nifty-pare-9dc3c8.netlify.app/" class="button -md -black text-white js-button">
+                  <a href="https://nifty-pare-9dc3c8.netlify.app" class="button -md -black text-white js-button">
                     View Website
                   </a>
                   <a href="https://themeforest.net/item/cafena-coffee-shop-psd-template/screenshots/32629948?index=3"
