--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
                       <div class="ratio ratio-2:3 bg-image swiper-lazy"
-                        data-background="img/img-projects/project-2.png">
+                        data-background="img/img-projects/coffeeshopSC.png">
                       </div>
                     </div>
                   </div>
@@ -329,7 +329,7 @@
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Resturaunt
+                      Coffee Shop
                     </h3>
                   </div>
 
